# onedocepares

./: .gitignore  AGENTS.md  API.md  BUILDPLAN.md  CLAUDE.md  FRONTEND instructions.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/api/: .env.example  Cargo.toml
apps/api/migrations/: 0001_auth.sql  0002_cms.sql  0003_cms_extended.sql  0004_fix_ip_address.sql  0005_teams_players.sql  0006_tournaments.sql  0007_leaderboards.sql  0008_social.sql  0009_matches.sql
apps/api/src/: app.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  state.rs
apps/api/src/middleware/: auth.rs  csrf.rs
apps/api/src/repositories/: activity_feed.rs  audit_log.rs  auth.rs  badges.rs  cms.rs  leaderboards.rs  matches.rs  media.rs  mod.rs  players.rs  registrations.rs  social.rs  teams.rs  tournaments.rs
apps/api/src/routes/: auth.rs  badges.rs  calendar.rs  cms.rs  feed.rs  health.rs  leaderboards.rs  matches.rs  media.rs  mod.rs  players.rs  registrations.rs  social.rs  teams.rs  tournaments.rs
apps/api/src/services/: auth.rs  calendar.rs  cms.rs  email.rs  leaderboard.rs  mod.rs
apps/api/src/utils/: slug.rs
apps/api/tests/: integration.rs
apps/web/: feed.html  index.html  leaderboard.html  login.html  package-lock.json  package.json  page.html  player.html  players.html  team.html  teams.html  tournament.html  tournaments.html  vite.config.js
apps/web/admin/: index.html
apps/web/src/: admin.js  feed.js  leaderboard.js  login.js  main.js  page.js  player.js  players.js  team.js  teams.js  tournament.js  tournaments.js
apps/web/src/css/: admin.scss  (+1 more)
infra/caddy/: Caddyfile
infra/docker/: README.md
infra/sql/: README.md
(+15 files in other folders)
